# code_practice

./: README.md
codejam/: CMakeLists.txt  base_solution.cpp  base_solution.h  blank_solution.cpp  blank_solution.h  input.txt  main.cpp  print_helpers.h  string_helpers.cpp  string_helpers.h
codejam/2008/: milkshakes.cpp  milkshakes.h  minimum_scalar_product.cpp  minimum_scalar_product.h
codejam/2014/: charging.cpp  charging.h  repeater.cpp  repeater.h
codejam/2015/: dijkstra.cpp  dijkstra.h  ominous.h  pancakes.cpp  pancakes.h  r1a4.cpp  r1a4.h  r1at1.h  r1at3.cpp  r1at3.h  r2a1.cpp  r2a1.h  standing_ovation.h
codejam/africa/: reserve_words.cpp  reserve_words.h  store_credit.cpp  store_credit.h  t9.cpp  t9.h
cpp/: .gitignore  Amazon.cpp  README.md
cpp/JavaVMLoad/: CMakeLists.txt
cpp/JavaVMLoad/src/: java_init.cpp  java_init.h  main.cpp
cpp/merchants/: input_parser.cpp  input_parser.h  main.cpp  parser_test.cpp  parser_test.h
cpp/osx/: test1.mm
golang/interface/: interface  main.go
golang/remove_duplicates/: Readme.md  algo.go  algo_test.go  main.go  remove_duplicates
golang/speed/: speed.go  speed_test.go
kata09/: README.md  basket.rb  checkout.rb  rules.rb
kata09/test/: test_checkout.rb  test_rules.rb
marshall/: optional_bool.go
ruby/: .gitignore  README.md  cash.rb  xing.rb
ruby/api/: Gemfile  README.md
ruby/bookmarks/: .rubocop.yml  Gemfile  README.md
ruby/coup/: README.md  docker-compose.yml
ruby/customers/: Gemfile
ruby/fyber-r/: .env  .rubocop.yml  Dockerfile  Gemfile  README.md  Rakefile  author_factory.rb  connection.rb  docker-compose.yml  package.rb  package_factory.rb  (+3 more)
wimdu_cli/: .gitignore  Gemfile  README.md  Rakefile
(+202 files in other folders)
